tests/invalid/global_variables/variable_used_as_fun.rs
/*
compilationExitCode: 3
*/

foo: i64 = 3;

main(): i32 {
    return foo();
}